[Add]1.pacakge angular-monaco-editor by ng-packagr

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,9 @@
     "typeRoots": [
       "node_modules/@types"
     ],
+    "paths": {
+      "angularMonacoEditor":["lib/editor"]
+    },
     "lib": [
       "es2017",
       "dom"
