--- a/demo/package.json
+++ b/demo/package.json
@@ -55,7 +55,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "lodash-es": "^4.17.10",
     "monaco-editor": "^0.14.3",
-    "ng-packagr": "^3.0.3",
+    "ng-packagr": "3.0.3",
     "protractor": "~5.1.2",
     "rxjs": "^5.5.6",
     "ts-node": "~4.1.0",
